# mnemix

./: .gitignore  .pr-body-m4.md  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  RELEASE_NOTES.md  rust-toolchain.toml
.ai/: copilot-instructions.md
.dex/: config.toml  sync-state.json  tasks.jsonl
.github/workflows/: ci.yml  docs.yml  publish-python.yml  release.yml
crates/mnemix-cli/: Cargo.toml
crates/temporal-plane-cli/: Cargo.toml
crates/temporal-plane-cli/src/: cli.rs  errors.rs  main.rs
crates/temporal-plane-cli/src/cmd/: checkpoint.rs  history.rs  import.rs  init.rs  mod.rs  optimize.rs  recall.rs  remember.rs  restore.rs  search.rs  show.rs  stats.rs  versions.rs
crates/temporal-plane-cli/src/output/: human.rs  mod.rs
crates/temporal-plane-cli/tests/: cli_flow.rs
crates/temporal-plane-core/: Cargo.toml
crates/temporal-plane-lancedb/: Cargo.toml
docs/: checkpoint-and-retention-policy.md  mnemix-plan-v3.md  release-checklist.md  repo-scaffold-spec.md  temporal-plane-coding-guidelines.md  temporal-plane-roadmap.md  versioning-and-restore.md
docs_site/: package-lock.json  package.json
docs_site/.vitepress/: config.mts
docs_site/src/: index.md
python/: pyproject.toml
python/mnemix/: __init__.py  _version.py  client.py  errors.py  models.py
python/tests/: test_mnemix_aliases.py  test_runner.py
scripts/: build-python-wheel-with-cli.sh  check-linux-release-build.sh  check-python-bundled-wheel.sh  publish-release.sh  release.sh
website/: index.html  package-lock.json  package.json  process_icon.cjs  process_images.cjs
(+48 files in other folders)
